whoami/01-httpbin.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin
  namespace: whoami
spec:
  replicas: 5
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin

---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: whoami
  labels:
    app: httpbin
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: httpbin
  selector:
    app: httpbin
