whoami/01-whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-v1
  namespace: app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1
        image: traefik/whoami

---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: app
  labels:
    app: app-v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: app-v1
  selector:
    app: app-v1
