whoami/03-ingress-haproxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-haproxy
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: haproxy
#    neo.traefik.io/access-control-policy: "my-acp@app"
spec:
  rules:
    - host: whoami.haproxy.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-haproxy
                port:
                  number: 80
