whoami/03-ingress-nginx-inc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-inc
  namespace: app
#  annotations:
#    neo.traefik.io/access-control-policy: "my-acp@app"
spec:
  ingressClassName: nginx-inc
  rules:
    - host: nginx-inc.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 80
