whoami/03-ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx
  namespace: whoami
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    hub.traefik.io/access-control-policy: "my-acp@whoami"
spec:
  ingressClassName: nginx-k8s
  rules:
    - host: whoami.nginx.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-nginx
                port:
                  number: 80
          - path: /httpbin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
