whoami/03-ingress-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-traefik
  namespace: whoami
#   annotations:
#     hub.traefik.io/access-control-policy: "my-acp@app"
spec:
  ingressClassName: traefik-lb
  rules:
    - host: whoami.traefik.hub.demo.traefiklabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-traefik
                port:
                  number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-tls
  namespace: whoami
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`app.traefik.hub.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Path(`/helloleszigotos`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.traefik.hub.demo.traefiklabs.tech`) && Path(`/app`) && Headers(`X-Traefik`, `powpow`)
      services:
        - name: whoami
          port: 80
        - name: whoami
          port: 80
        - name: whoami
          port: 80
