whoami/03-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-traefik
  namespace: app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.docker.localhost`)
      services:
        - name: app-v1
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx
  namespace: app
spec:
  ingressClassName: nginx-k8s
  rules:
    - host: nginx-k8s.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-inc
  namespace: app
spec:
  ingressClassName: nginx-inc
  rules:
    - host: nginx-inc.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 80
